<resources>
    <string name="app_name">Book Finder</string>
    <string name="find_book">Find a book&#8230;</string>
    <string name="logo_description">Book finder logo</string>

    <string name="book_title">Romeo and Juliet</string>
    <string name="book_description">A retelling in rhymed couplets of Shakespeare\'s tragedy of ill-fated young lovers is accompanied by illustrations from the author\'s second-grade class.</string>

    <string name="authors">
        Lois Burdett \nWilliam Shakespeare
    </string>
    <string name="label_authors">Authors</string>
    <string name="label_publisher">Publisher</string>
    <string name="label_publication_year">Publication Date</string>
    <string name="label_pages">Pages</string>
    <string name="label_categories">Categories</string>
    <string name="label_description">Description</string>
    <string name="book_details_app_title">Book Details</string>
    <string name="action_bookmark">Add to Favorite</string>
    <string name="action_view_bookmark">View Favorite</string>
    <string name="saved_books_app_title">Saved Books</string>
    <string name="no_book_title">Provide a book title to find.</string>
    <string name="no_network">Internet connection is required to search for books.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_hint">Find a book&#8230;</string>
    <string name="no_result_found">No books matching your search query.</string>
    <string name="no_favorite">You have no favorite books yet.</string>
    <string name="favorite_books">Favorite Books</string>
</resources>
