<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookDetailFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_view_book"
                android:layout_width="218dp"
                android:layout_height="300dp"
                android:contentDescription="Romeo and Juliet"
                android:src="@drawable/sample_book" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_book_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_authors"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_authors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/authors" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_publisher"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_publisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Firefly Books" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_publication_year"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_publication_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1998" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_pages"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_pages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="64" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_categories"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Juvenile Nonfiction" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/label_description"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/textview_book_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>